// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Tag
    text="Normal"
  >
    <span
      className="tag orion-fusion-theme"
      data-terra-tag={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
    >
      Normal
    </span>
  </Tag>
</ThemeContextProvider>
`;

exports[`Tag should render a tag 1`] = `
<span
  className="tag"
  data-terra-tag={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
>
  Normal
</span>
`;

exports[`Tag should render an icon and text 1`] = `
<span
  className="tag"
  data-terra-tag={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
>
  <span
    className="icon"
  >
    <img
      alt="icon"
    />
  </span>
  text
</span>
`;

exports[`Tag should render an interactive tag 1`] = `
<button
  className="tag is-interactive"
  data-terra-tag={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
>
  text
</button>
`;

exports[`Tag should render as an anchor when provided an href 1`] = `
<a
  className="tag is-interactive has-underline"
  data-terra-tag={true}
  href="MockHref"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="link"
>
  href
</a>
`;

exports[`Tag should render as an button tag when href is not provided 1`] = `
<button
  className="tag is-interactive"
  data-terra-tag={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
>
  text
</button>
`;
